--- a/Develop/package.json
+++ b/Develop/package.json
@@ -17,6 +17,16 @@
     "url": "https://github.com/jmfarthin/project-2/issues"
   },
   "homepage": "https://github.com/jmfarthin/project-2#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "connect-session-sequelize": "^7.0.4",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
+  },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8"
