--- a/package.json
+++ b/package.json
@@ -5,15 +5,12 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-
-    "start": "node server.js", 
+    "start": "node server.js",
     "start watch": "npm run css-watch",
     "css-build": "node-sass --omit-source-map-url sass/mystyles.scss css/mystyles.css",
-    "css-watch": "npm run css-build -- --watch"
+    "css-watch": "npm run css-build -- --watch",
     "seed": "node Develop/seeds/seeds.js"
-
   },
-
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/jmfarthin/project-2.git"
@@ -37,6 +34,8 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "bulma": "^0.9.4",
+    "node-sass": "^8.0.0"
   }
 }
