--- a/Develop/package.json
+++ b/Develop/package.json
@@ -31,7 +31,10 @@
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "opencage-api-client": "^1.4.0",
+    "geolib": "^3.3.1"
+
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
