--- a/Develop/package.json
+++ b/Develop/package.json
@@ -9,7 +9,7 @@
     "start watch": "npm run css-watch",
     "css-build": "node-sass --omit-source-map-url public/sass/mystyles.scss public/css/mystyles.css",
     "css-watch": "npm run css-build -- --watch",
-    "seed": "node Develop/seeds/seeds.js"
+    "seed": "node seeds/seeds.js"
   },
   "repository": {
     "type": "git",
