--- a/Develop/package.json
+++ b/Develop/package.json
@@ -32,7 +32,8 @@
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.6.0",
     "opencage-api-client": "^1.4.0",
-    "geolib": "^3.3.1"
+    "geolib": "^3.3.1",
+    "node-fetch": "^3.3.1"
 
   },
   "devDependencies": {
