--- a/Develop/package.json
+++ b/Develop/package.json
@@ -28,18 +28,16 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.6.0",
-    "opencage-api-client": "^1.4.0",
     "geolib": "^3.3.1",
-    "node-fetch": "^3.3.1"
-
+    "mysql2": "^2.2.5",
+    "node-fetch": "^2.6.9",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8",
     "bulma": "^0.9.4",
-    "node-sass": "^8.0.0"
+    "eslint-config-prettier": "^8.8.0",
+    "node-sass": "^8.0.0",
+    "prettier": "^2.8.8"
   }
 }
